--- a/week-07/FoxClub/FoxClub/FoxClub/Views/Home/ActionHistory.cshtml
+++ b/week-07/FoxClub/FoxClub/FoxClub/Views/Home/ActionHistory.cshtml
@@ -4,42 +4,92 @@
     <title></title>
 </head>
 <body>
-    <form action="foxInfo" method="get">
-        <button class="linkButton" type="submit" name="Name" value="@Model.Name">Information</button>
-    </form>
-    <form action="nutritionStore" method="get">
-        <button class="linkButton" type="submit" name="Name" value="@Model.Name">Nutrition Store</button>
-    </form>
-    <form action="trickCenter" method="get">
-        <button class="linkButton" type="submit" name="Name" value="@Model.Name">Trick Center</button>
-    </form>
-    <form action="actionHistory" method="get">
-        <button class="linkButton" type="submit" name="Name" value="@Model.Name">Action History</button>
-    </form>
-    @if (Model.ActionHistory.Count() == 0)
-    {
-        <p>There are no actions yet</p>
-    }
-    else
-    {
-        @for (int i = 0; i < Model.ActionHistory.Count(); i++)
-        {
-            <p>@Model.ActionHistory[i]</p>
-        }
-    }
+    <header id="main">
+        <div class="links">
+            <form action="foxInfo" method="get">
+                <button class="linkButton" type="submit" name="Name" value="@Model.Name">Information</button>
+            </form>
+            <form action="nutritionStore" method="get">
+                <button class="linkButton" type="submit" name="Name" value="@Model.Name">Nutrition Store</button>
+            </form>
+            <form action="trickCenter" method="get">
+                <button class="linkButton" type="submit" name="Name" value="@Model.Name">Trick Center</button>
+            </form>
+            <form action="actionHistory" method="get">
+                <button class="linkButton" type="submit" name="Name" value="@Model.Name">Action History</button>
+            </form>
+        </div>
+        <img src="https://raw.githubusercontent.com/green-fox-academy/teaching-materials/master/project/programmer-fox-club/assets/greenfox.png?token=AVCVPHZBULONE4LYJ45PWOTBQTZ2M" alt="Fox Image" />
+        <div class="lists">
+            @if (Model.ActionHistory.Count() == 0)
+            {
+                <p>There are no actions yet</p>
+            }
+            else
+            {
+                @for (int i = 0; i < Model.ActionHistory.Count(); i++)
+                {
+                    <p>@Model.ActionHistory[i]</p>
+                }
+            }
+        </div>
+    </header>
 </body>
 </html>
 <style>
+    body {
+        font-family: 'Comic Sans MS';
+        background-color: seagreen;
+    }
+
     .linkButton {
         outline: none;
-        background-color: transparent;
-        font-size: 15px;
-        text-decoration: underline;
-        border: none;
-        color: blue;
+        border-radius: 5px;
+        padding: 3px;
+        font-size: 25px;
+        border: 2px solid black;
+        color: black;
+        background-color: seagreen;
     }
-    .linkButton:hover {
-        color: purple;
-        cursor: pointer;
+
+        .linkButton:hover {
+            border: 2px solid seagreen;
+            background-color: black;
+            color: seagreen;
+            cursor: pointer;
+        }
+
+    img {
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+        margin: 30px;
+    }
+
+    #title {
+        text-align: center;
+    }
+
+    #main {
+        position: absolute;
+        top: 50px;
+        left: 50%;
+        transform: translateX(-50%);
+        border: 3px solid black;
+        background-color: lightgray;
+        width: 60%;
+        padding: 30px;
+    }
+
+    .links {
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: row;
+        flex-wrap: nowrap;
+    }
+
+    .lists {
+        margin-top: 40px;
+        margin-left: 180px;
     }
 </style>
