--- a/week-07/FoxClub/FoxClub/FoxClub/Views/Home/LearnTricks.cshtml
+++ b/week-07/FoxClub/FoxClub/FoxClub/Views/Home/LearnTricks.cshtml
@@ -4,52 +4,101 @@
     <title></title>
 </head>
 <body>
-    <form action="foxInfo" method="get">
-        <button class="linkButton" type="submit" name="Name" value="@Model.Name">Information</button>
-    </form>
-    <form action="nutritionStore" method="get">
-        <button class="linkButton" type="submit" name="Name" value="@Model.Name">Nutrition Store</button>
-    </form>
-    <form action="trickCenter" method="get">
-        <button class="linkButton" type="submit" name="Name" value="@Model.Name">Trick Center</button>
-    </form>
-    <form action="actionHistory" method="get">
-        <button class="linkButton" type="submit" name="Name" value="@Model.Name">Action History</button>
-    </form>
-    <form action="/greenfox/learnATrick" method="post">
-        @if (Model.Tricks.Count() == Model.TricksToLearn.Count())
-        {
-            <p>There are no tricks to learn</p>
-        }
-        else
-        {
-            <label for="tricks">Tricks:</label>
-            <select id="Tricks" name="trick">
-                @for (int i = 0; i < Model.TricksToLearn.Count(); i++)
+    <header id="main">
+        <div class="links">
+            <form action="foxInfo" method="get">
+                <button class="linkButton" type="submit" name="Name" value="@Model.Name">Information</button>
+            </form>
+            <form action="nutritionStore" method="get">
+                <button class="linkButton" type="submit" name="Name" value="@Model.Name">Nutrition Store</button>
+            </form>
+            <form action="trickCenter" method="get">
+                <button class="linkButton" type="submit" name="Name" value="@Model.Name">Trick Center</button>
+            </form>
+            <form action="actionHistory" method="get">
+                <button class="linkButton" type="submit" name="Name" value="@Model.Name">Action History</button>
+            </form>
+        </div>
+        <img src="https://raw.githubusercontent.com/green-fox-academy/teaching-materials/master/project/programmer-fox-club/assets/greenfox.png?token=AVCVPHZBULONE4LYJ45PWOTBQTZ2M" alt="Fox Image" />
+        <div class="lists">
+            <form action="/greenfox/learnATrick" method="post">
+                @if (Model.Tricks.Count() == Model.TricksToLearn.Count())
                 {
-                    if (!Model.Tricks.Contains(Model.TricksToLearn[i]))
-                    {
-                        <option value="@Model.TricksToLearn[i]">@Model.TricksToLearn[i]</option>
-                    }
+                    <p>There are no tricks to learn</p>
                 }
-            </select>
-            <button type="submit" name="Name" value="@Model.Name">Submit</button>
-        }
-    </form>
+                else
+                {
+                    <label for="tricks">Tricks:</label>
+                    <select id="Tricks" name="trick">
+                        @for (int i = 0; i < Model.TricksToLearn.Count(); i++)
+                        {
+                            if (!Model.Tricks.Contains(Model.TricksToLearn[i]))
+                            {
+                                <option value="@Model.TricksToLearn[i]">@Model.TricksToLearn[i]</option>
+                            }
+                        }
+                    </select>
+                    <button type="submit" name="Name" value="@Model.Name">Submit</button>
+                }
+            </form>
+        </div>
+    </header>
 </body>
 </html>
 <style>
+    body {
+        font-family: 'Comic Sans MS';
+        background-color: seagreen;
+    }
+
     .linkButton {
         outline: none;
-        background-color: transparent;
-        font-size: 15px;
-        text-decoration: underline;
-        border: none;
-        color: blue;
+        border-radius: 5px;
+        padding: 3px;
+        font-size: 25px;
+        border: 2px solid black;
+        color: black;
+        background-color: seagreen;
     }
 
         .linkButton:hover {
-            color: purple;
+            border: 2px solid seagreen;
+            background-color: black;
+            color: seagreen;
             cursor: pointer;
         }
+
+    img {
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+        margin: 30px;
+    }
+
+    #title {
+        text-align: center;
+    }
+
+    #main {
+        position: absolute;
+        top: 50px;
+        left: 50%;
+        transform: translateX(-50%);
+        border: 3px solid black;
+        background-color: lightgray;
+        width: 60%;
+        padding: 30px;
+    }
+
+    .links {
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: row;
+        flex-wrap: nowrap;
+    }
+
+    .lists {
+        margin-top: 40px;
+        margin-left: 180px;
+    }
 </style>
