make todo app connected with a database

--- a/week-07/FoxClub/FoxClub/FoxClub/Views/Home/Index.cshtml
+++ b/week-07/FoxClub/FoxClub/FoxClub/Views/Home/Index.cshtml
@@ -100,9 +100,12 @@
         flex-direction: row;
         flex-wrap: nowrap;
     }
-    .lists{
+    .lists {
+        width: 60%;
         margin-top: 40px;
-        margin-left: 180px;
+        margin-left: 150px;
+        padding: 25px;
+        border: 1px solid darkgrey;
     }
    
 </style>
