--- a/week-07/FoxClub/FoxClub/FoxClub/Views/Home/SetNutrition.cshtml
+++ b/week-07/FoxClub/FoxClub/FoxClub/Views/Home/SetNutrition.cshtml
@@ -96,7 +96,11 @@
     }
 
     .lists {
+        width: 60%;
         margin-top: 40px;
-        margin-left: 180px;
+        margin-left: 150px;
+        padding: 25px;
+        border: 1px solid darkgrey;
+        text-align: center;
     }
 </style>
