--- a/week-07/FoxClub/FoxClub/FoxClub/Views/Home/Login.cshtml
+++ b/week-07/FoxClub/FoxClub/FoxClub/Views/Home/Login.cshtml
@@ -20,7 +20,6 @@
         background-color: seagreen;
     }
 
-
     #main {
         position: absolute;
         top: 50px;
@@ -30,6 +29,7 @@
         background-color: lightgray;
         width: 60%;
         padding: 30px;
+        text-align: center;
     }
 
 </style>
